# haskellfun

./: .gitignore  README.md
googletasks/part1/: README.md  haskell-fun-tasks.cabal
googletasks/part1/src/: Main.hs
googletasks/part2/: haskell-fun-tasks.cabal
googletasks/part2/src/: Main.hs
googletasks/part3/: README.md  haskell-fun-tasks.cabal  stack.yaml
googletasks/part3/src/: Application.hs  Foundation.hs  Main.hs
googletasks/part3/src/Routes/: Home.hs
googletasks/part3/static/: style.css
