name:                haskell-fun-tasks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mcapodici/haskellfun
license:             BSD3
license-file:        LICENSE
author:              Martin Capodici
maintainer:          Martin Capodici
copyright:           2017 Martin Capodici
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-fun-tasks
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , persistent
                     , persistent-sqlite
                     , persistent-template
